Final touches.. xD

--- a/todo-list-front/style.css
+++ b/todo-list-front/style.css
@@ -96,6 +96,15 @@ body {
     border-color: #393939 !important;
 }
 
+.sad-face {
+    color: #DC143C !important;
+    font-size: 22px;
+}
+
+.happy-face {
+    color: #00AD56 !important;
+    font-size: 22px;
+}
 
 
 
