--- a/todo-list-front/light-style.css
+++ b/todo-list-front/light-style.css
@@ -1,28 +1,94 @@
-tr.zavrseno{
-    background-color:#d4edda;
+tr.zavrseno {
+    background-color: #d4edda;
 }
 
-
-
-table{
+table {
     /* border: 1px solid lightgrey ; */
     color: #52057b;
 }
 
 thead {
-    color: #00AD56;
-    background-color: #d4edda;
+    color: black;
+    background-color: #FFEE86;
 }
 
 tbody {
-    color: #748080;
+    color: black;
 }
 
-tr:hover {
-    color:#00AD56 !important;
+th,
+td {
+    border-top: 1px solid #DEE2E6 !important;
 }
 
-.pretraga-form input, select{
+.naslov {
+    color: black;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+#dodaj_novi {
+    margin-top: 30px;
+}
+
+.dugme-brisanje {
+    background-color: #DC143C !important;
+    color: white !important;
+}
+
+.dugme-izmjena {
+    background-color: #007BFF !important;
+    color: white !important;
+}
+
+.dugme-dodaj {
+    background-color: #28A745 !important;
+    border: 2px solid #28A745 !important;
+    color: white !important;
+}
+
+.dugme-ocisti {
+    background-color: #007BFF !important;
+    border: 2px solid #007BFF !important;
+    color: white !important;
+}
+
+.dugme-ocisti:hover {
+    background-color: #007BFF !important;
+    border: 2px solid white !important;
+    color: white !important;
+}
+
+
+/*.modal-content {*/
+
+
+/*    background-color: #d4edda !important;*/
+
+
+/*}*/
+
+
+/*.modal-title {*/
+
+
+/*    color: #00AD56 !important;*/
+
+
+/*}*/
+
+
+/*.close {*/
+
+
+/*    color: #DC143C !important;*/
+
+
+/*}*/
+
+
+/* .modal-body input,
+textarea {
     box-sizing: border-box;
     background-color: #d4edda !important;
     border: 0px !important;
@@ -30,72 +96,7 @@ tr:hover {
     text-indent: 10px;
     color: #00AD56 !important;
     margin-bottom: 3px;
-}
-
-.pretraga-form input:focus{
-    box-sizing: border-box;
-    background-color: #d4edda;
-    border: 0px;
-    display: block;
-    text-indent: 10px;
-    color: #00AD56;
-    margin-bottom: 3px;
-}
-
-::placeholder {
-    color: #00AD56 !important;
-}
-
-.naslov {
-    color: #00AD56;
-    font-size: 30px;
-}
-
-#dodaj_novi{
-    margin-top: 30px;
-}
-
-.dugme-brisanje {
-    color: #DC143C !important;
-}
-
-.dugme-izmjena {
-    color: #007BFF !important;
-}
-
-.dugme-dodaj {
-    background-color: #28A745 !important;
-}
-
-.dugme-ocisti {
-    background-color: #007BFF !important;
-}
-
-.modal-content {
-    background-color: #222222 !important;
-}
-
-.modal-title {
-    color: #00AD56 !important;
-}
-
-.close {
-    color: #DC143C !important;
-}
-
-.modal-body input, textarea {
-    box-sizing: border-box;
-    background-color: #393939 !important;
-    border: 0px !important;
-    display: block;
-    text-indent: 10px;
-    color: #00AD56 !important;
-    margin-bottom: 3px;
-}
-
-.modal-footer, .modal-header {
-    border-color: #393939 !important;
-}
+} */
 
 .sad-face {
     color: #DC143C !important;
@@ -124,7 +125,6 @@ tr:hover {
     height: 26px;
     width: 50px;
     transform: scale(1.5);
-
 }
 
 .label .ball {
@@ -139,10 +139,9 @@ tr:hover {
     transition: transform 0.2s linear;
 }
 
-.checkbox:checked + .label .ball {
+.checkbox:checked+.label .ball {
     transform: translateX(24px);
 }
-
 
 .fa-moon {
     color: #f1c40f;
@@ -151,7 +150,3 @@ tr:hover {
 .fa-sun {
     color: #f39c12;
 }
-
-
-
-
