--- a/todo-list-front/style.css
+++ b/todo-list-front/style.css
@@ -63,11 +63,23 @@ body {
 }
 
 .dugme-dodaj {
+    color: #00AD56 !important;
+    border: 2px solid #00AD56 !important
+}
+
+.dugme-dodaj:hover {
     background-color: #00AD56 !important;
+    color: black !important;
 }
 
 .dugme-ocisti {
+    color: #DC143C !important;
+    border: 2px solid #DC143C !important;
+}
+
+.dugme-ocisti:hover {
     background-color: #DC143C !important;
+    color: black !important;
 }
 
 .modal-content {
